--- a/settings.ini
+++ b/settings.ini
@@ -2,11 +2,9 @@
 #############################################################
 # Settings for the google bot                               #
 #############################################################
-
 [MAIN]
 proxy_file = working_proxies2.txt
 max_threads = 50
-
 
 [QUERY]
 # The hot words file
@@ -15,3 +13,13 @@ hot_words_file = hotwords.ini
 # The number of results to search for.
 result_size = 8
 sleep_time=3
+
+[RABBIT]
+server=turtle.rmq.cloudamqp.com
+user=qddxpjau
+vhost=qddxpjau
+password=SMJ4jbIv97tiSQg7YDIw8RLMCjyWoVXg
+timeout=5
+
+in_queue=google_in
+out_queue=google_out
