--- a/conf/google.conf
+++ b/conf/google.conf
@@ -1,12 +1,12 @@
 [GOOGLE]
 # How many search threads
-search_count = 20
+search_count = 5
 # How many fetcher threads
-fetcher_count = 50
+fetcher_count = 10
 hot_words_file = conf/hotwords.ini
 blacklist_file = conf/blacklist_file.ini
 result_size = 8
 sleep_time=3
 
 in_queue=google_in
-out_queue=manager
+out_queue=ranker_in
